example/secondfile/objects/WF_Engine_Rule__c.object
<CustomObject>
    <description>WF Engine Rule</description>
    <fields>
        <fullName>DataType_Score__c</fullName>
        <label>Input DataType Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Score__c</fullName>
        <label>Entry Score</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_StoringOP__c</fullName>
        <label>Object Storing the Rule O/P</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_TriggerRule__c</fullName>
        <label>Object will Trigger the Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Formula__c</fullName>
        <formula>CASE(Operator__c,
&quot;&gt;&quot;, 0,
&quot;&lt;&quot;, 1,
&quot;=&quot;, 2,
&quot;&gt;=&quot;, 3,
&quot;&lt;=&quot;, 4,
&quot;!=&quot;, 5,
&quot;{}&quot;, 6,
&quot;!{}&quot;, 7,
8)</formula>
        <label>Operator Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>{}</fullName>
                </value>
                <value>
                    <fullName>!{}</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output_DataType__c</fullName>
        <label>Output DataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Field__c</fullName>
        <label>Score Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Type__c</fullName>
        <label>Score Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Set</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Subtract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <label>Score Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFE_Rule_Label__c</fullName>
        <label>WFE Rule Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFE_Rule_Name__c</fullName>
        <label>WFE Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WFE_Rule_Name__c</columns>
        <columns>Object_TriggerRule__c</columns>
        <columns>IsActive__c</columns>
        <columns>Order__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Operator__c</columns>
        <columns>Entry_Score__c</columns>
        <columns>Score_Type__c</columns>
        <columns>Score_Field__c</columns>
        <columns>Score_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WFE-{0000}</displayFormat>
        <label>WF Engine</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>